--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ document.addEventListener('DOMContentLoaded', function(event) {
             </span>
           </label>
 
-          <div class="trigger"><a class="page-link" href="/assets/files/HamedIzadian_CV.pdf" download="HamedIzadian_CV.pdf">Download CV</a>
+          <div class="trigger"><a class="page-link" href="/assets/files/CV.pdf" download="CV.pdf">Download CV</a>
 
 
 
